Added RestControllerTests